package edu.hitsz.prop;

public class BloodProp extends AbstractProp{
    public BloodProp(int locationX,int locatinoY,int speedX,int speedY){
        super(locationX,locatinoY,speedX,speedY);
    }
}
