package edu.hitsz.prop;

public class BombProp extends AbstractProp{
    public BombProp(int locationX, int locatinoY, int speedX, int speedY){
        super(locationX,locatinoY,speedX,speedY);
    }
}
