package edu.hitsz.prop;

public class BulletProp extends AbstractProp{
    public BulletProp(int locationX, int locatinoY, int speedX, int speedY){
        super(locationX,locatinoY,speedX,speedY);
    }
}
